--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,45 @@
-version: '3'
+version: '3.9'
+
 services:
   rabbitmq:
     image: rabbitmq:3-management
     restart: always
     container_name: test-rabbitmq
     ports:
-      - 5672:5672 # default ports
-      - 15672:15672 # default ports
+      - 5673:5672 # default ports 5672:5672
+      - 15673:15672 # default ports 15672:15672
+     # environment:
+      # RABBITMQ_DEFAULT_USER: guest error: RABBITMQ_DEFAULT_USER is set but deprecated
+      # RABBITMQ_DEFAULT_PASS: guest error: RABBITMQ_DEFAULT_PASS is set but deprecated
+  postgres:
+    image: postgres
+    restart: always
+    container_name: keycloak-db
+    ports:
+      - 5433:5432 # default ports 5432:5432
     environment:
-      RABBITMQ_DEFAULT_USER: guest
-      RABBITMQ_DEFAULT_PASS: guest
+      POSTGRES_DB: ${POSTGRESQL_DB}
+      POSTGRES_USER: ${POSTGRESQL_USER}
+      POSTGRES_PASSWORD: ${POSTGRESQL_PASS}
+    networks:
+      - local-keycloak
+
+  keycloak:
+    depends_on:
+      - postgres
+    container_name: local_keycloak
+    environment:
+      DB_VENDOR: postgres
+      DB_ADDR: postgres
+      DB_DATABASE: ${POSTGRESQL_DB}
+      DB_USER: ${POSTGRESQL_USER}
+      DB_PASSWORD: ${POSTGRESQL_PASS}
+    image: jboss/keycloak:${KEYCLOAK_VERSION}
+    ports:
+      - "28080:8080"
+    restart: unless-stopped
+    networks:
+      - local-keycloak
+
+networks:
+  local-keycloak:
