HCaptcha repo migration is completed. validateCaptcha is disabled for Swagger.

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -24,6 +24,12 @@ zuul:
       sensitive-headers:
       strip-prefix: false
       serviceId: payment-service
+    validate:
+      path: /validate/**
+      url: ${STUDENT_SERVICE_BASE_URL}
+      sensitive-headers:
+      strip-prefix: false
+      serviceId: validate
 
 ribbon:
   eureka:
