--- a/swagger2-application/src/main/resources/application.yml
+++ b/swagger2-application/src/main/resources/application.yml
@@ -58,12 +58,18 @@ spring:
               republishToDlq: true
               dlqDeadLetterExchange:
               dlqTtl: 300000
-      default:
-        contentType: application/json
 
-  zipkin:
-    base-url: http://localhost:9411
-    enabled: false
+management:
+  tracing:
+    sampling:
+      probability: 0.1
 
 server:
   port: 8082
+
+springdoc:
+  api-docs:
+    path: /swagger/api-docs
+  swagger-ui:
+    path: /swagger-ui.html # http://localhost:8082/swagger-ui/index.html
+    enabled: true
