--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 BASE_URL: http://localhost:8080
 STUDENT_SERVICE_BASE_URL: http://localhost:8081
-SWAGGER2_APPLICATION_BASE_URL: http://localhost:8082
+SWAGGER_APPLICATION_BASE_URL: http://localhost:8082
 PAYMENT_SERVICE_BASE_URL: http://localhost:8083
 OPENAI_SERVICE_BASE_URL: http://localhost:8084
 
@@ -22,10 +22,10 @@ spring:
           uri: ${STUDENT_SERVICE_BASE_URL}
           filters:
             - StripPrefix=2
-        - id: swagger2-application
+        - id: swagger-application
           predicates:
             - Path=/api/**
-          uri: ${SWAGGER2_APPLICATION_BASE_URL}
+          uri: ${SWAGGER_APPLICATION_BASE_URL}
           filters:
             - StripPrefix=2
         - id: payment-service
