--- a/student-service/src/main/resources/application.yml
+++ b/student-service/src/main/resources/application.yml
@@ -61,12 +61,6 @@ spring:
               republishToDlq: true
               dlqDeadLetterExchange:
               dlqTtl: 300000
-      default:
-        contentType: application/json
-
-  zipkin:
-    base-url: http://localhost:9411
-    enabled: false
 
   security:
     oauth2:
@@ -84,6 +78,13 @@ spring:
 
 server:
   port: 8081
+
+springdoc:
+  api-docs:
+    path: /student/api-docs
+  swagger-ui:
+    path: /swagger-ui.html # http://localhost:8081/swagger-ui/index.html
+    enabled: true
 
 feign:
   services:
