payment-service - spring boot 3, java 21 and swagger upgrade

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-KEYCLOAK_VERSION=16.1.1
-PORT_KEYCLOAK=8080
-POSTGRESQL_USER=keycloak
-POSTGRESQL_PASS=keycloak
-POSTGRESQL_DB=keycloak
+KEYCLOAK_VERSION=23.0.4
+POSTGRESQL_USER=postgres
+POSTGRESQL_PASS=postgres
+POSTGRESQL_DB=postgres
+KEYCLOAK_ADMIN=admin
+KEYCLOAK_ADMIN_PASSWORD=admin
