--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -60,6 +60,12 @@
             <version>1.9.20.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webflux-ui</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
