--- a/payment-service/src/main/resources/application.yml
+++ b/payment-service/src/main/resources/application.yml
@@ -56,3 +56,13 @@ springdoc:
     path: /payment/api-docs
   swagger-ui:
     path: /swagger-ui.html # http://localhost:8083/swagger-ui/index.html
+    csrf:
+      enabled: true
+
+  security: # Custom variables
+    config:
+      password-flow: true
+      openid-discovery: false
+      auth-code-flow: false
+      implicit-flow: false
+      bearer: false
