--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -66,6 +66,11 @@
             <version>2.3.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-docker-compose</artifactId>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
